Fix responsive on tablet

--- a/src/app/components/admin/staff-shifts-overview/staff-shifts-overview.component.sass
+++ b/src/app/components/admin/staff-shifts-overview/staff-shifts-overview.component.sass
@@ -110,3 +110,34 @@ mat-form-field
       width: 200px
       padding: .5em
       text-align: center
+
+@media screen and (min-width: 570px) and (max-width: 1440px)
+ 
+  .component-content
+    margin-left: 5em
+  .week-filter-div
+    width: 100%
+
+    .column
+      padding: 1em
+
+    .mid-column
+      padding: 1em .25em
+
+  .white-col
+    width: 200px
+
+  .full-name-col
+    width: 200px
+  mat-form-field
+    width: 100%
+  .scheduled-div
+    overflow-x: scroll
+
+  .header-row
+    width: auto
+
+    .header-col
+      width: 200px
+      padding: .5em
+      text-align: center
